--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
     "build": "node build/build.js",
-    "deploy": "npm run build && aws s3 sync dist/ s3://kyky"
+    "deploy": "npm run build && aws s3 sync dist/ s3://loydahelsinki.fi"
   },
   "dependencies": {
     "aws-amplify": "^0.2.11",
